# FastLogfileParser

./: .gitignore  README.md  bulk_rename.py  comparison.py  create_dbs.sh  db_write.py  fast_gaussian_logfile_parser.py  main.py  preprocess_logs.py  pyproject.toml  test.py  test_remote_files.py
.github/workflows/: CI.yml  gen_docs.yml
fastlogfileparser/cosmors/: __init__.py  fast_cosmors_logfile_parser.py
fastlogfileparser/cosmors/utils/: postprocessing.py  regexes.py
fastlogfileparser/gaussian/: __init__.py  fast_gaussian_logfile_parser.py
fastlogfileparser/gaussian/utils/: postprocessing.py  preprocessing.py  regexes.py
fastlogfileparser/generic/: iter_patterns.py  postprocessing.py
fastlogfileparser/orca/: __init__.py  fast_orca_logfile_parser.py
fastlogfileparser/orca/utils/: postprocessing.py  regexes.py
test/: cosmors_test.py  data_check_test.py  data_loader.py  gaussian_test.py  orca_test.py
utils/: postprocessing.py  preprocessing.py  regexes.py
